# rocm-libraries

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  rmake.py  rocJPEG-setup.py  rtest.py  tensile_tag.txt
.azuredevops/: rocm-ci.yml  rocprim.yml
.github/: CODEOWNERS  repos-config.json
.github/ISSUE_TEMPLATE/: issue_report.yml
.github/scripts/: github_api_client.py  github_checks_api_client.py  github_cli_client.py  pr-auto-label.py  pr-detect-changed-subtrees.py  pr-fanout.py  pr_auto_label.py  pr_detect_changed_subtrees.py  pr_fanout.py  pr_fanout_sync_labels.py  pr_reflect_checks.py  repo_config_model.py
.github/workflows/: formatting.yml  initial-setup.yml  merge-submodules.yml  pr-auto-label.yml  pr-close-fanouts.yml  pr-fanout.yml  pr-import.yml  pr-reflect-checks-pull.yml  pr-reflect-checks-push.yml  pr-reflect-checks.yml  therock-ci.yml  update-staging-subtree.yml  update-subtrees.yml
.jenkins/: common.groovy  precheckin.groovy  static.groovy
MIOpen/: Jenkinsfile
api/: rocdecode.h  rocdecode_version.h  rocdecode_version.h.in  rocjpeg.h  rocjpeg_version.h  rocjpeg_version.h.in
api/amd_detail/: rocdecode_api_trace.h  rocjpeg_api_trace.h
api/rocdecode/: roc_bitstream_reader.h  rocdecode.h  rocparser.h
api/rocjpeg/: rocjpeg.h
benchmark/: ConfigAutotuneSettings.cmake  benchmark_block_adjacent_difference.cpp  benchmark_block_discontinuity.cpp  benchmark_block_exchange.cpp  benchmark_block_histogram.cpp  benchmark_block_radix_rank.cpp  benchmark_block_radix_sort.cpp  benchmark_block_reduce.cpp  benchmark_block_run_length_decode.cpp  benchmark_block_scan.cpp  benchmark_block_sort.cpp  benchmark_block_sort.parallel.hpp  benchmark_config_dispatch.cpp  benchmark_device_adjacent_difference.cpp  benchmark_device_adjacent_difference.parallel.cpp.in  benchmark_device_adjacent_difference.parallel.hpp  benchmark_device_adjacent_find.parallel.cpp.in  benchmark_device_adjacent_find.parallel.hpp  benchmark_device_batch_memcpy.cpp  benchmark_device_binary_search.cpp  benchmark_device_binary_search.parallel.cpp.in  benchmark_device_binary_search.parallel.hpp  benchmark_device_find_end.hpp  benchmark_device_find_first_of.parallel.cpp.in  benchmark_device_find_first_of.parallel.hpp  benchmark_device_histogram.cpp  benchmark_device_histogram.parallel.cpp.in  benchmark_device_histogram.parallel.hpp  benchmark_device_memory.cpp  benchmark_device_merge.cpp  benchmark_device_merge.parallel.cpp.in  benchmark_device_merge.parallel.hpp  benchmark_device_merge_inplace.cpp  benchmark_device_merge_sort.hpp  benchmark_device_merge_sort_block_merge.parallel.cpp.in  benchmark_device_merge_sort_block_merge.parallel.hpp  benchmark_device_merge_sort_block_sort.parallel.cpp.in  benchmark_device_merge_sort_block_sort.parallel.hpp  benchmark_device_nth_element.hpp  benchmark_device_partial_sort.hpp  (+44 more)
clients/gtest/: matmul_gtest.yaml
cmake/: rocshmem_config.h.in
cmake/Modules/: SetFortranFlags.cmake  rocm-cmake.cmake
cmake_modules/: rocdecode-config.cmake.in  rocjpeg-config.cmake.in
common/: utils.hpp  utils_data_generation.hpp
docs/: CONTRIBUTING.md  conf.py  index.rst
docs/conceptual/: rocPRIM-operations.rst  rocPRIM-scope.rst
docs/how-to/: using-hipfort.rst  using-rocdecode.rst  (+2 more)
examples/: CMakeLists.txt  rocshmem_allreduce_test.cc  rocshmem_alltoall_test.cc  rocshmem_broadcast_test.cc  rocshmem_init_attr_test.cc  rocshmem_put_signal_test.cc
hipfort/: CMakeLists.txt  README.md
hipfort/docs/: conf.py  index.rst
hipfort/docs/install/: install.rst
hipfort/docs/sphinx/: _toc.yml.in
lib/: CMakeLists.txt
rocBLAS/: CMakeLists.txt
rocDecode/: CHANGELOG.md
rocPyDecode/: CHANGELOG.md
rocSHMEM/: README.md
samples/: videodecode.py  videodecodemem.py  videodecodeperf.py  videodecodergb.py
scripts/: install_dependencies.sh
src/: CMakeLists.txt  assembly.hpp  backend_bc.cpp  backend_bc.hpp  backend_type.hpp  context.hpp  context_device.cpp  context_incl.hpp  context_tmpl_device.hpp  context_tmpl_host.hpp  device_proxy.hpp  ipc_policy.cpp  ipc_policy.hpp  roc_pyvideodecode.cpp  roc_pyvideodecodecpu.cpp  rocjpeg_decoder.cpp  rocjpeg_decoder.h  rocjpeg_vaapi_decoder.cpp  rocjpeg_vaapi_decoder.h  rocshmem.cpp  rocshmem_gpu.cpp  stats.hpp  team.cpp  team.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  common_test_header.hpp
test/hip/: test_hip_api.cpp  test_hip_async_copy.cpp  test_ordered_block_id.cpp
test/rocDecodeNegativeApiTests/: CMakeLists.txt  rocdecode_api_negative_tests.cpp  rocdecodenegativetest.cpp
test/rocjpeg_negative_api_tests/: CMakeLists.txt  rocjpeg_api_negative_tests.cpp  rocjpeg_api_negative_tests.h  rocjpegnegativetest.cpp
test/rocprim/: CMakeLists.txt  test_bit_cast.cpp  test_block_adjacent_difference.cpp.in  test_block_adjacent_difference.hpp  test_block_adjacent_difference.kernels.hpp  test_block_discontinuity.cpp.in  test_block_discontinuity.hpp  test_block_discontinuity.kernels.hpp  test_block_exchange.kernels.hpp  test_block_histogram.kernels.hpp  test_block_load_store.hpp  test_block_load_store.kernels.hpp  test_block_radix_rank.cpp.in  test_block_radix_rank.hpp  test_block_radix_sort.kernels.hpp  test_block_reduce.kernels.hpp  test_block_run_length_decode.cpp  test_block_scan.cpp.in  test_block_scan.hpp  test_block_scan.kernels.hpp  test_block_shuffle.hpp  test_block_sort.hpp  test_block_store.hpp  test_block_store.kernels.hpp  test_block_store_direct.cpp  test_block_store_striped.cpp  test_block_store_transpose.cpp  test_block_store_vectorize.cpp  test_config_dispatch.cpp  test_device_find_end.cpp  test_device_merge.cpp  test_device_merge_sort.cpp  test_device_radix_sort.hpp  test_device_reduce_by_key.cpp  test_device_run_length_encode.cpp  test_device_scan.cpp  test_device_search_n.cpp  test_device_segmented_reduce.cpp  test_device_transform.cpp  test_intrinsics.cpp  (+17 more)
test/rocprim/detail/: get_rocprim_version.cpp
test/rocprim/internal/: test_internal_merge_path.cpp
test/testScripts/: run_rocDecodeSamples.py  run_rocDecode_Conformance.py
tests/: CMakeLists.txt
(+536 files in other folders)
